--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=pedidos
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+server.port=8085
