ADD: LocalExceptionHandler en clientes.

--- a/clientes/pom.xml
+++ b/clientes/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.commons</groupId>
+			<artifactId>eureka-server</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
