--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -5,5 +5,8 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.prefer-ip-address=true
 
+eureka.client.jersey.enabled=false
+
+
 logging.level.com.netflix.eureka=off
 logging.level.com.netflix.discovery=off
