--- a/clientes/src/main/resources/application.properties
+++ b/clientes/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
 server.port=8087
