--- a/productos/src/main/resources/application.properties
+++ b/productos/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
 server.port=8086
